// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Avatar /> Spec Snapshots should render an image avatar 1`] = `
.c0 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI","Helvetica Neue",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  width: 30px;
  height: 30px;
  line-height: 30px;
  font-size: 13px;
  background: #edb0df;
  border-radius: 50%;
  text-align: center;
  color: #ffffff;
  background: transparent;
  background-image: url(https://picsum.photos/id/1062/200/200);
  background-size: cover;
  background-position: center center;
  image-rendering: -webkit-optimize-contrast;
  image-rendering: crisp-edges;
}

<div>
  <div
    class="c0"
  />
</div>
`;

exports[`<Avatar /> Spec Snapshots should render avatar with name and color should always be the same 1`] = `
.c0 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI","Helvetica Neue",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  width: 30px;
  height: 30px;
  line-height: 30px;
  font-size: 13px;
  background: #edb0df;
  border-radius: 50%;
  text-align: center;
  color: #ffffff;
}

<div>
  <div
    class="c0"
  >
    JD
  </div>
</div>
`;

exports[`<Avatar /> Spec Snapshots should render large avatar 1`] = `
.c0 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI","Helvetica Neue",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  width: 30px;
  height: 30px;
  line-height: 30px;
  font-size: 13px;
  background: #edb0df;
  border-radius: 50%;
  text-align: center;
  color: #ffffff;
}

<div>
  <div
    class="c0"
  >
    JD
  </div>
</div>
`;

exports[`<Avatar /> Spec Snapshots should render small avatar with a single initial 1`] = `
.c0 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI","Helvetica Neue",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  width: 16px;
  height: 16px;
  line-height: 16px;
  font-size: 11px;
  background: #edb0df;
  border-radius: 50%;
  text-align: center;
  color: #ffffff;
}

<div>
  <div
    class="c0"
  >
    J
  </div>
</div>
`;
